--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,4 +15,6 @@
     <string name="day_count">天数</string>
     <string name="alive_cell_count">存活细胞</string>
     <string name="authors">作者</string>
+    <string name="scale_mode_on">缩放模式 开</string>
+    <string name="scale_mode_off">缩放模式 关</string>
 </resources>
