--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -17,4 +17,6 @@
     <string name="authors">作者</string>
     <string name="scale_mode_on">缩放模式 开</string>
     <string name="scale_mode_off">缩放模式 关</string>
+    <string name="map_width">地图宽度</string>
+    <string name="map_height">地图高度</string>
 </resources>
