--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -21,4 +21,13 @@
     <string name="map_height">地图高度</string>
     <string name="invalidate_map_fps">刷新地图帧率</string>
     <string name="recenter_map">地图居中</string>
+    <string name="donate">捐赠</string>
+    <string name="info">关于</string>
+    <string name="description">说明</string>
+    <string name="copyright_info">版权所有 © 2021 答舟工作室。保留一切权利。</string>
+    <string name="description_content">在康威的生命游戏中，规定了如下生存定律: \n
+        1. 若当前细胞周围8格的存活细胞数量等于3，迭代后该细胞状态变为存活。 \n
+        2. 若当前细胞为存活状态，且周围8格的存活细胞数量小于2或大于3，迭代后该细胞状态变为死亡。\n
+        3. 若当前细胞为存活状态，且周围8格的存活细胞数量等于2或等于3，迭代后该细胞状态不变。</string>
+    <string name="open_source_info">该应用程序是开源的。你可以在 GitHub 找到源码。</string>
 </resources>
