--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -31,9 +31,9 @@
         2. 颜色迭代: \n
         (1). 当前细胞迭代后的颜色从周围8格存活细胞出现最多的颜色中随机选取；若周围8格存活细胞数量为0，迭代后该细胞颜色不变。\n
         3. 生命迭代: \n
-        (1). 若当前细胞周围8格相同颜色的存活细胞数量等于3，迭代后该细胞状态变为存活。 \n
-        (2). 若当前细胞为存活状态，且周围8格相同颜色的存活细胞数量小于2或大于3，迭代后该细胞状态变为死亡。\n
-        (3). 若当前细胞为存活状态，且周围8格相同颜色的存活细胞数量等于2或等于3，迭代后该细胞状态不变。</string>
+        (1). 若当前细胞周围8格与其颜色相同的存活细胞数量等于3，迭代后该细胞状态变为存活。 \n
+        (2). 若当前细胞为存活状态，且周围8格与其颜色相同的存活细胞数量小于2或大于3，迭代后该细胞状态变为死亡。\n
+        (3). 若当前细胞为存活状态，且周围8格与其颜色相同的存活细胞数量等于2或等于3，迭代后该细胞状态不变。</string>
     <string name="open_source_info">《誓言细胞》是开源的。你可以在 GitHub 找到源码。</string>
     <string name="palette">调色盘</string>
 </resources>
