--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -25,7 +25,7 @@
     <string name="info">关于</string>
     <string name="description">说明</string>
     <string name="copyright_info">版权所有 © 2021 答舟工作室。保留一切权利。</string>
-    <string name="description_content">
+    <string name="help_content">
         在《誓言细胞》中，规定了如下生存定律: \n
         1. 细胞迭代分为两部分，颜色迭代优先级高于生命迭代。\n
         2. 颜色迭代: \n
@@ -36,4 +36,13 @@
         (3). 若当前细胞为存活状态，且周围8格与其颜色相同的存活细胞数量等于2或等于3，迭代后该细胞状态不变。</string>
     <string name="open_source_info">《誓言细胞》是开源的。你可以在 GitHub 找到源码。</string>
     <string name="palette">调色盘</string>
+    <string name="story_mode">剧情模式</string>
+    <string name="sandbox_mode">沙盒模式</string>
+    <string name="survive_mode">生存模式</string>
+    <string name="versus_mode">对战模式</string>
+    <string name="exit_game">退出游戏</string>
+    <string name="exit">退出</string>
+    <string name="help">帮助</string>
+    <string name="settings">设置</string>
+    <string name="coming_soon">仍在制作中 !</string>
 </resources>
