--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -45,4 +45,5 @@
     <string name="help">帮助</string>
     <string name="settings">设置</string>
     <string name="coming_soon">仍在制作中 !</string>
+    <string name="main_menu">主菜单</string>
 </resources>
