--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="settings">Settings</string>
     <string name="exit">Exit</string>
     <string name="coming_soon">Coming Soon !</string>
+    <string name="main_menu">Main Menu</string>
 </resources>
