--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,7 @@
     <string name="exit">Exit</string>
     <string name="coming_soon">Coming Soon !</string>
     <string name="main_menu">Main Menu</string>
+    <string name="small_land">Small Land (64 * 64)</string>
+    <string name="normal_land">Normal Land (128 * 128)</string>
+    <string name="large_land">large Land (256 * 256)</string>
 </resources>
