--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -21,7 +21,6 @@
     <string name="map_height">地图高度</string>
     <string name="iteration_map_fps">地图刷新率</string>
     <string name="recenter_map">地图居中</string>
-    <string name="donate">捐赠</string>
     <string name="info">关于</string>
     <string name="description">说明</string>
     <string name="copyright_info">版权所有 © 2021 答舟工作室。保留一切权利。</string>
@@ -49,4 +48,8 @@
     <string name="small_land">小型地图 (64 * 64)</string>
     <string name="normal_land">正常地图 (128 * 128)</string>
     <string name="large_land">扩展地图 (256 * 256)</string>
+    <string name="draw_fps_limit">绘制帧率上限</string>
+    <string name="iteration_map_fps_limit">地图刷新率上限</string>
+    <string name="initial_alive_probability">初始细胞存活率</string>
+    <string name="map_scale">地图缩放</string>
 </resources>
